[package]
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"
name = "simsearch"
version = "0.2.5"
license = "MIT/Apache-2.0"

description = "A simple and lightweight fuzzy search engine that works in memory, searching for similar strings (a pun here)."
documentation = "https://docs.rs/simsearch"
repository = "https://github.com/andylokandy/simsearch-rs"
homepage = "https://github.com/andylokandy/simsearch-rs"
readme = "README.md"
exclude = ["books.json"]

keywords = ["fuzzy", "search", "lightweight", "pattern", "strsim"]
categories = ["algorithms", "text-processing"]

[dependencies]
strsim = "0.10"
triple_accel = "0.3.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[dev-dependencies]
inquire = "0.5"
json = "0.11.13"
lazy_static = "1.3.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"
itertools = "0.8"
criterion = "0.2.11"

[[bench]]
name = "lib"
harness = false
