[package]
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"
name = "simsearch"
version = "0.3.0"
license = "MIT/Apache-2.0"

description = "A simple and lightweight fuzzy search engine that works in memory, searching for similar strings (a pun here)."
documentation = "https://docs.rs/simsearch"
repository = "https://github.com/andylokandy/simsearch-rs"
homepage = "https://github.com/andylokandy/simsearch-rs"
readme = "README.md"
exclude = ["books.json"]

keywords = ["fuzzy", "search", "lightweight", "pattern", "strsim"]
categories = ["algorithms", "text-processing"]

[dependencies]
strsim = "0.11"
triple_accel = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[dev-dependencies]
inquire = "0.7"
serde_json = "1"
quickcheck = "1"
quickcheck_macros = "1"
itertools = "0.14"
divan = "0.1"

[[bench]]
name = "lib"
harness = false
